--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
@@ -12,6 +13,7 @@ import "../styles/global.css";
 		<title>Link Hub</title>
 	</head>
 	<body>
+		<Header/>
 		<slot />
 	</body>
 </html>
